--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.4.0",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "web3": "^1.3.6"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
@@ -22,10 +24,12 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
+    "dotenv": "^10.0.0",
     "eslint": "^7.22.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.7.0",
     "jest": "^26.6.3",
+    "truffle": "^5.3.8",
     "vue-jest": "^3.0.4"
   }
 }
